[package]
name = "yeek"
version = "0.1.0"
authors = ["Ruin0x11 <ipickering2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
full_moon = "0.9.0"
clap = "2.33.3"
anyhow = "1.0.38"
id-arena = "2.2"
walkdir = "2.3"
indicatif = "0.15.0"
rayon = "1.5.0"
